--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query": "^5.59.20",
     "classnames": "^2.5.1",
     "lodash": "^4.17.21",
+    "lottie-react": "^2.4.1",
     "mouse-firework": "^0.0.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -46,6 +47,7 @@
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.13.0",
     "vite": "^5.4.10",
-    "vite-plugin-node-polyfills": "^0.22.0"
+    "vite-plugin-node-polyfills": "^0.22.0",
+    "vite-plugin-svgr": "^4.3.0"
   }
 }
