--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite dev --host 0.0.0.0 --port 12944",
-    "build": "tsc -b && vite build",
+    "build": "tsc -b && pnpm build-notes && vite build",
+    "build-notes": "tsx ./scripts/build-notes.ts",
     "deploy": "tcb hosting deploy dist -e xiao-hei-bai-meow-9e1j2j319afb88",
     "preview": "vite preview",
     "lint": "eslint --max-warnings=0 . --fix",
@@ -13,8 +14,11 @@
   "dependencies": {
     "@tanstack/react-query": "^5.59.20",
     "classnames": "^2.5.1",
+    "dayjs": "^1.11.13",
+    "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
     "lottie-react": "^2.4.1",
+    "markdown-it": "^14.1.0",
     "mouse-firework": "^0.0.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -44,6 +48,7 @@
     "prettier-plugin-tailwindcss": "^0.6.8",
     "sass-embedded": "^1.80.6",
     "tailwindcss": "^3.4.14",
+    "tsx": "^4.19.2",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.13.0",
     "vite": "^5.4.10",
