--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lodash": "^4.17.21",
     "lottie-react": "^2.4.1",
     "markdown-it": "^14.1.0",
+    "markdown-it-toc-and-anchor": "^4.2.0",
     "mouse-firework": "^0.0.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
