--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-router": "^7.1.1",
+    "react-tagcloud": "^2.3.3",
     "remove-markdown": "^0.6.0",
     "theme-shokax-anime": "^0.0.7",
     "zustand": "5.0.1"
@@ -36,6 +37,7 @@
     "@types/node": "^22.9.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/react-tagcloud": "^2.3.2",
     "@typescript-eslint/parser": "^8.13.0",
     "@vitejs/plugin-react": "^4.3.3",
     "autoprefixer": "^10.4.20",
