--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "dev": "vite dev --host 0.0.0.0 --port 12944",
     "build": "tsc -b && pnpm build-notes && vite build",
     "build-notes": "tsx ./scripts/build-notes.ts",
-    "deploy": "tcb hosting deploy dist -e xiao-hei-bai-meow-9e1j2j319afb88",
+    "deploy": "scf deploy",
     "preview": "vite preview",
     "lint": "eslint --max-warnings=0 . --fix",
     "prettier": "prettier -w --ignore-unknown .",
